--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
     <!--Additional CSS must be placed AFTER Bootstrap CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css" />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/brands.css" />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/solid.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="/css/styles.css">
     <title>Nucamp: A Better Way To Camp</title>
@@ -120,7 +119,9 @@
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid">
-                        <form id="reserveForm" action="https://us-central1-nucamp-production.cloudfunctions.net/post/formdata" method="post">
+                        <form id="reserveForm"
+                            action="https://us-central1-nucamp-production.cloudfunctions.net/post/formdata"
+                            method="post">
                             <div class="row mb-3">
                                 <label for="numCampers" class="col-sm-6 col-form-label">Numbers of Campers</label>
                                 <div class="col">
@@ -138,14 +139,12 @@
                             <div class="row mb-3">
                                 <label for="date" class="col-sm-6 col-form-label">Date</label>
                                 <div class="col">
-                                    <input class="form-control" type="date" id="date" name="date"
-                                        placeholder="date">
+                                    <input class="form-control" type="date" id="date" name="date" placeholder="date">
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <div class="col">
-                                    <button type="submit" class="btn btn-dark"
-                                        data-bs-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-dark" data-bs-dismiss="modal">Cancel</button>
                                     <button type="submit" class="btn btn-primary">Search</button>
                                 </div>
                             </div>
@@ -163,42 +162,47 @@
         <section class="row row-content">
             <div class="col col-md-8 mx-auto">
                 <div id="homeCarousel" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="0" class="active"></button>
-                            <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1"></button>
-                            <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2"></button>
-                        </div>
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="0"
+                            class="active"></button>
+                        <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2"></button>
+                    </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground">
                             <div class="carousel-caption">
                                 <h3>Breadcrumb Trail Campground</h3>
-                                <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+                                <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path,
+                                    hike-in-only campground.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground">
                             <div class="carousel-caption">
                                 <h3>React Lake Campground</h3>
-                                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this
+                                    campground on the shores of the pristine React Lake is a favorite for fly fishers.
+                                </p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground">
                             <div class="carousel-caption">
                                 <h3>Chrome River Campground</h3>
-                                <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
+                                <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy
+                                    of old-growth firs at this enchanting spot by the Chrome River.</p>
                             </div>
                         </div>
                     </div>
-                        <a class="carousel-control-prev" href="#homeCarousel" role="button" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#homeCarousel" role="button" data-bs-slide="next">
-                            <span class="carousel-control-next-icon"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
+                    <a class="carousel-control-prev" href="#homeCarousel" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#homeCarousel" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </section>
@@ -283,9 +287,7 @@
         </div>
     </footer>
     <!-- Bootstrap JavaScript plugins -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
