--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <img src="img/logo.png" class="image-fluid">
+                    <a href="index.html"><img src="img/logo.png" class="image-fluid"></a>
                 </div>
                 <div class="col">
                     <h1>Nucamp</h1>
